# igmas

./: Cargo.toml
igmas-client/: Cargo.toml
igmas-client/src/: main.rs
igmas-server/: Cargo.toml
igmas-server/src/: main.rs
igmas-shared/: Cargo.toml
igmas-shared/src/: lib.rs
