[workspace]
members = ["igmas-client", "igmas-server", "igmas-shared"]

[workspace.dependencies]
hostname = "^0.3"
log = "^0.4"
env_logger = "^0.9"
serde_json = "^1.0"
config = "^0.13"
igmas-shared = { path = "igmas-shared" }
serde = "^1.0"
dirs = "^4.0"
reqwest = "^0.11"
rocket = "0.5.0-rc.2"
tokio = "^1.0"
futures = "^0.3"
