[package]
name = "igmas-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igmas-shared = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
log = { workspace = true }
reqwest = { features = ["json"] , workspace = true }
serde = { features = ["derive"] , workspace = true }
serde_json = { workspace = true }
tokio = { features = ["rt-multi-thread", "macros"] , workspace = true }

[[bin]]
name = "igmas"
path = "src/main.rs"
