[package]
name = "igmas-server"
version = "0.1.0"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igmas-shared = { path = "../igmas-shared" }
config = "0.10"
env_logger = "0.7"
futures = "0.3"
hyper = "0.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }