[package]
name = "igmas-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igmas-shared = { workspace = true }
env_logger = { workspace = true }
rocket = { workspace = true }
log = { workspace = true }
serde = { features = ["derive"] , workspace = true }
serde_json = { workspace = true }
